# ghostwriter-mirror

./: CHANGELOG.md  CMakeLists.txt
autotest/: CMakeLists.txt
autotest/markdowneditor/: CMakeLists.txt  tst_markdownedit.cpp  tst_markdownedit.h
doc/: man-ghostwriter.1.docbook
resources/: preview.css  widgets.qss
src/: CMakeLists.txt  mainwindow.cpp  markdowneditor_p.h  outlinemodel.cpp  outlinemodel.h  outlineproxymodel.cpp  outlineproxymodel.h  outlinewidget.cpp  outlinewidget.h  stylesheetbuilder.cpp  stylesheetbuilder.h
src/editor/: markdowneditor.cpp  markdowneditor.h  markdowneditor_p.h
src/settings/: appsettings.cpp  appsettings.h
